# invoke

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  tasks.py
integration/: _util.py  context.py  main.py  runners.py
integration/_support/: busywork.py  respond_base.py  respond_both.py
sites/www/: conf.py
src/invoke/: __init__.py  collection.py  config.py  context.py  env.py  exceptions.py  executor.py  loader.py  main.py  program.py  results.py  runners.py  tasks.py  terminals.py  util.py  watchers.py
src/invoke/completion/: complete.py
src/invoke/parser/: __init__.py  argument.py  context.py  parser.py
tests/: _util.py  collection.py  completion.py  concurrency.py  config.py  conftest.py  context.py  executor.py  init.py  loader.py  merge_dicts.py  parser_argument.py  parser_context.py  parser_parser.py  program.py  runners.py  task.py  terminals.py  test_collection.py  watchers.py
tests/_support/: autoprint.py  custom_executor.py  deeper_ns_list.py  empty_subcollection.py  explicit_root.py  namespacing.py  simple_ns_list.py
tests/_support/configs/: collection.py
tests/_support/configs/yaml/: explicit.py
tests/_support/configs/yml/: explicit.py
tests/_support/tree/: __init__.py
